config.json: updated title

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Réaumur ",
+    "title": "Réaumur-Buron",
     "path_prefix": "/",
     "favicon": "images/favicon.png",
     "logo_dark": "images/logo.svg",
