--- a/content/data/config.json
+++ b/content/data/config.json
@@ -10,7 +10,7 @@
     "bg_image_secondary": "/images/leaf-light-grey.svg",
     "bg_image_product": "/images/leaf.svg",
     "snipcart_api_key": "e6210273-35ce-45a1-b996-581e62917bf3",
-    "footer_text": "Copyright 2021 reaumur Inc. All rights reserved.",
+    "footer_text": "Copyright 2021 Réaumur Inc. All rights reserved.",
     "palette": "green",
     "main_menu": [
         {
