config.json: updated logo_dark

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -2,7 +2,7 @@
     "title": "Réaumur-Buron",
     "path_prefix": "/",
     "favicon": "images/favicon.png",
-    "logo_dark": "images/logo.svg",
+    "logo_dark": "images/logo-white.svg",
     "logo_light": "images/favicon.png",
     "hamburger_background_image": "/images/leaf-light-grey.svg",
     "bg_image_primary": "/images/header.jpg",
